feat: added <enddate> to the TV show NFO